--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -21,7 +21,7 @@
     }
   #nav-me {
     display: block;
-    background: url('/img/me.JPG');
+    background: url('/img/me.jpg');
     background-size: cover;
     padding: 0;
     width: 100px;
